CSS separate file. Droid Serif up, Navigation bar looks nice

--- a/Portfolio Website v2.html
+++ b/Portfolio Website v2.html
@@ -1,49 +1,80 @@
 <!DOCTYPE html>
 <head>
-  <title>Nicolas Crumrine</title>
-  <style>
-	
-  </style>
+   <title>Nicolas Crumrine</title>
+  <link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" href="C:\Users\NicLaptop\Desktop\Web Development\v2 Portfolio Website\Profile-Website-version2\Portfolio CSS.css" />
 </head>
 <body>
-	<nav>
-		<div class="leftContainer">
-			<span> Nicolas Crumrine </span>
-			<span> Web Developer based in NYC </span>
-		</div>
-	
-		<div class="rightContainer">
-			<!-- Links -->
-		</div>
-	</nav>
-	
-	<div id="projectInfoContainer">
-		<div id="projectPic"> </div>
-		<p id="projectTitle"> </p>
-		<p id="projectShortDescription"> </p>
-		<div id="projectTools"> </div>
-		<div id="projectSkills"> </div>
-		<p id="projectProductPaper"></p>
-		<button id="projectCode"> </button>
-		<button id="projectVisit"> </button>
-	</div>
-	<div id="projectSelectBoxes"> </div>
-	
-	<p id="addressAndListen"> </p>
-	
-	<form id="contactContainer">
-		<div id="nameAndAddress"> 
-			<input id="name" />
-			<input id="address" />
-		</div>
-		<input id="message" />
-		
-		<button id="sendMessage"> 
-		
-	</form>
-
-  <script>
-  
-  </script>
+   <nav>
+      <ul>
+         <li id="nameNavContainer"> <p id="nic" > Nicolas Crumrine </p>
+							<p id="nicJob" > Web Developer based in NYC </p> 
+         </li>
+         <li>
+			<a href="https://github.com/CrumrineCoder" >
+				<img src="https://www.dropbox.com/s/h9uzapc7d469n95/github.png?raw=1" width="42" height="42" border="0" color="white" >
+			</a>
+         </li>
+         <li>
+			<a href="https://codepen.io/CrumrineCoder/pens/public/">
+				<img src="https://www.dropbox.com/s/nncdzhyt5eio6ea/codepen.png?raw=1" width="42" height="42" border="0">
+			</a>
+         </li>
+         <li>
+			<a href="https://www.linkedin.com/in/nicolas-crumrine-50899b120/">
+				<img src="https://www.dropbox.com/s/29ed8qny7az3yij/linked.png?raw=1" width="42" height="42" border="0">
+            </a>
+         </li>
+         <li> 
+            <a href="download link"> 
+				<img src="https://www.dropbox.com/s/lgr3bxn9pmapo1q/resume.png?raw=1" width="42" height="42" border="0">
+            </a>
+         </li>
+      </ul>
+      <!-- 
+         <div class="leftContainer">
+         	<span> Nicolas Crumrine </span>
+         	<span> Web Developer based in NYC </span>
+         </div>
+         
+         <div class="rightContainer">
+         		<a href="https://github.com/CrumrineCoder">
+         		<img src="https://www.dropbox.com/s/h9uzapc7d469n95/github.png?raw=1" width="42" height="42" border="0" color="white" >
+         	</a>
+         	<a href="https://codepen.io/CrumrineCoder/pens/public/">
+         		<img src="https://www.dropbox.com/s/nncdzhyt5eio6ea/codepen.png?raw=1" width="42" height="42" border="0">
+         	</a>
+         	<a href="https://www.linkedin.com/in/nicolas-crumrine-50899b120/">
+         		<img src="https://www.dropbox.com/s/29ed8qny7az3yij/linked.png?raw=1" width="42" height="42" border="0">
+         	</a>
+         	<a href="download link"> 
+         		<img src="https://www.dropbox.com/s/lgr3bxn9pmapo1q/resume.png?raw=1" width="42" height="42" border="0">
+         	</a>
+         </div> -->
+   </nav>
+   <div id="projectInfoContainer">
+      <div id="projectPic"> </div>
+      <p id="projectTitle"> </p>
+      <p id="projectShortDescription"> </p>
+      <div id="projectTools"> </div>
+      <div id="projectSkills"> </div>
+      <p id="projectProductPaper"></p>
+      <button id="projectCode"> See Code </button>
+      <button id="projectVisit">  Visit Website </button>
+   </div>
+   <div id="projectSelectBoxes"> </div>
+   <p>Stay a while and listen!</p>
+   <p> crumrinecoding@gmail.com </p>
+   <form id="contactContainer">
+      <div id="nameAndAddress"> 
+         <label for="name"> Name </label> 
+         <input id="name" >
+         <label for="address"> Address </label> 
+         <input id="address" >
+      </div>
+      <label for="Message"> Message </label> 
+      <input id="Message" />
+      <button id="sendMessage"> Send Message </button> 
+   </form>
+   <script></script>
 </body>
-  
