--- a/Portfolio Website v2.html
+++ b/Portfolio Website v2.html
@@ -11,18 +11,18 @@
 							<p id="nicJob" > Web Developer based in NYC </p> 
          </li>
          <li>
-			<a href="https://github.com/CrumrineCoder" >
-				<img src="https://www.dropbox.com/s/h9uzapc7d469n95/github.png?raw=1" width="42" height="42" border="0" color="white" >
+			<a href="https://github.com/CrumrineCoder" id="github" >
+				<img src="https://www.dropbox.com/s/ip2xtp3cbss2lq9/githubWhite.png?raw=1" width="42" height="42" border="0" color="white" >
 			</a>
          </li>
          <li>
 			<a href="https://codepen.io/CrumrineCoder/pens/public/">
-				<img src="https://www.dropbox.com/s/nncdzhyt5eio6ea/codepen.png?raw=1" width="42" height="42" border="0">
+				<img src="https://www.dropbox.com/s/aa4m5yv5qa8hw04/codepenWhite.png?raw=1" width="42" height="42" border="0">
 			</a>
          </li>
          <li>
 			<a href="https://www.linkedin.com/in/nicolas-crumrine-50899b120/">
-				<img src="https://www.dropbox.com/s/29ed8qny7az3yij/linked.png?raw=1" width="42" height="42" border="0">
+				<img src="https://www.dropbox.com/s/9womvy68itpalg6/linkedinWhite.png?raw=1" width="42" height="42" border="0">
             </a>
          </li>
          <li> 
@@ -76,5 +76,9 @@
       <input id="Message" />
       <button id="sendMessage"> Send Message </button> 
    </form>
-   <script></script>
+   <script type="text/javascript" src=" C:\Users\NicLaptop\Desktop\Web Development\v2 Portfolio Website\Profile-Website-version2\portfolio javascript.js"> </script>
+   
+   
+    <script> 
+   </script>
 </body>
