Button now displays website info on click

--- a/Portfolio Website v2.html
+++ b/Portfolio Website v2.html
@@ -54,13 +54,13 @@
    </nav>
    <div id="projectInfoContainer">
       <div id="projectPic"> </div>
-      <p id="projectTitle"> </p>
-      <p id="projectShortDescription"> </p>
+      <div id="projectTitle"> </div>
+      <div id="projectShortDescription"> </div>
       <div id="projectTools"> </div>
       <div id="projectSkills"> </div>
-      <p id="projectProductPaper"></p>
-      <button id="projectCode"> See Code </button>
-      <button id="projectVisit">  Visit Website </button>
+      <div id="projectProductPaper"></div>
+      <div id="projectCode"> </div>
+      <div id="projectVisit"> </div>
    </div>
    <div id="projectSelectBoxes"> </div>
    <p>Stay a while and listen!</p>
