--- a/Portfolio Website v2.html
+++ b/Portfolio Website v2.html
@@ -65,6 +65,11 @@
       <input id="Message" />
       <button id="sendMessage"> Send Message </button> 
    </form>
+   
+   <ul> Logo Credits 
+	<li>Resume logo by Nicholas Menghini from Noun Project </li>
+    <li>Poll Website logo by Misha from Noun Project </li>
+   </ul>
    <script type="text/javascript" src=" C:\Users\NicLaptop\Desktop\Web Development\v2 Portfolio Website\Profile-Website-version2\portfolio javascript.js"> </script>
    
    
