More projects added, header is fixed at the top of the page

--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,8 @@
 	<li>Resume logo by Nicholas Menghini from Noun Project </li>
     <li>Poll Website logo by Misha from Noun Project </li>
 	<li> Weather App logo by Shastry from Noun Project </li> 
+	<li> Clock logo by mikicon fromm Noun Project </li> 
+	<li> Calculator logo by Thengakola fromm Noun Project </li> 
    </ul>
    <script type="text/javascript" src="projectController.js"> </script>
  
