--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,21 @@
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+<div id="splash">
+	<button onclick="change(0)" style="background: #A61C88"> <img src="https://www.dropbox.com/s/ilzr341uddw8d85/votingAppLogo.png?raw=1"></img></button> 
+	<button onclick="change(1)" style="background: #4BC42D"> <img src="https://www.dropbox.com/s/ukbsb6po0hhh09i/weatherApp%20logo.png?raw=1"></img></button> 
+	<button onclick="change(2)" style="background: #E5000F"> <img src="https://www.dropbox.com/s/larkckwosuw81tw/pomodoroAppLogo.png?raw=1"></img></button> 
+	<button onclick="change(3)" style="background: #00AEFF"> <img src="https://www.dropbox.com/s/jhsgasksxrhlc3h/wikipediaViewerLogo.png?raw=1"></img></button> 
+	<button onclick="change(4)" style="background: #CCBE00"> <img src="https://www.dropbox.com/s/o4otu48qrkji2ao/calculatorAppLogo.png?raw=1"></img></button> 
+
+</div>
+
+
+<div id="index">
    <nav>
       <ul>
          <li id="nameNavContainer"> <p id="nic" > Nicolas Crumrine </p>
-							<p id="nicJob" > Web Developer based in NYC </p> 
+			<p id="nicJob" > Web Developer based in NYC </p> 
          </li>
          <li>
 			<a href="https://github.com/CrumrineCoder" id="github" >
@@ -54,38 +65,9 @@
    <div id="projectSelectBoxes"> </div>
    <div id="contactInfo">
    <i class="fa fa-envelope-o fa-2x"> </i>
-	<p>Stay a while and listen!</p>	
+	<p>Come say Hi!</p>	
 	<p><a href="http://www.google.com/recaptcha/mailhide/d?k=01ght4MFCiQ05S163X7JgTjQ==&amp;c=aoPleq7inL7lHu6-9yfVzIwsgLWVKmilYlU7XLMsnxo=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01ght4MFCiQ05S163X7JgTjQ\x3d\x3d\x26c\x3daoPleq7inL7lHu6-9yfVzIwsgLWVKmilYlU7XLMsnxo\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">c...</a>@gmail.com </p>
    </div>
- <!--  <form id="contactContainer">
-      <div id="nameAndAddress"> 
-		<div id="nameContainer">
-			<label for="name"> Name </label> 
-			<input id="name" >
-		 </div>
-		 <div id="addressContainer">
-			<label for="address"> Address </label> 
-			<input id="address" >
-		 </div>
-      </div>
-      <label for="Message"> Message </label> 
-      <input id="Message" />
-      <button id="sendMessage"> Send Message </button> 
-   </form> -->
-   
-  <!-- <form action="submit.php" method="post">
-
-    <p>Your name: <input type="text" name="name" /></p>
-
-    <p>Your email: <input type="text" name="email" /></p>
-
-    <p class="antispam">Leave this empty: <input type="text" name="url" /></p>
-
-    <p><textarea name="message"></textarea></p>
-
-    <p><input type="submit" value="Send" /></p>
-
-</form> -->
 
    <ul> Logo Credits 
 	<li>Resume logo by Nicholas Menghini from Noun Project </li>
@@ -94,9 +76,6 @@
 	<li> Clock logo by mikicon fromm Noun Project </li> 
 	<li> Calculator logo by Thengakola fromm Noun Project </li> 
    </ul>
-   <script type="text/javascript" src="projectController.js"> </script>
- 
-   
-    <script> 
-   </script>
+</div>   
+  <script type="text/javascript" src="projectController.js"> </script>
 </body>
