--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 	<p><a href="http://www.google.com/recaptcha/mailhide/d?k=01ght4MFCiQ05S163X7JgTjQ==&amp;c=aoPleq7inL7lHu6-9yfVzIwsgLWVKmilYlU7XLMsnxo=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01ght4MFCiQ05S163X7JgTjQ\x3d\x3d\x26c\x3daoPleq7inL7lHu6-9yfVzIwsgLWVKmilYlU7XLMsnxo\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">c...</a>@gmail.com </p>
    </div>
 
-   <ul> Logo Credits 
+   <ul id = "credit"> Logo Credits 
 	<li>Resume logo by Nicholas Menghini from Noun Project </li>
     <li>Poll Website logo by Misha from Noun Project </li>
 	<li> Weather App logo by Shastry from Noun Project </li> 
