NAV IS FUCKING RUINING MY SHOW

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
       <ul>
          <li id="nameNavContainer"> <p id="nic" > Nicolas Crumrine </p>
 			<p id="nicJob" > Web Developer based in NYC </p> 
+				 <br id="responsiveBreakPoint" />
          </li>
+	
          <li>
 			<a href="https://github.com/CrumrineCoder" id="github" >
 				<img src="https://www.dropbox.com/s/ip2xtp3cbss2lq9/githubWhite.png?raw=1" width="42" height="42" border="0" color="white" >
