--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <div id="splash">
 	<button onclick="change(0)" style="background: #A61C88"> <img src="Images/votingAppLogo.png"></img></button> 
-	<button onclick="change(1)" style="background: #4BC42D"> <img src="https://www.dropbox.com/s/ukbsb6po0hhh09i/weatherApp%20logo.png?raw=1"></img></button> 
-	<button onclick="change(2)" style="background: #E5000F"> <img src="https://www.dropbox.com/s/larkckwosuw81tw/pomodoroAppLogo.png?raw=1"></img></button> 
-	<button onclick="change(3)" style="background: #00AEFF"> <img src="https://www.dropbox.com/s/jhsgasksxrhlc3h/wikipediaViewerLogo.png?raw=1"></img></button> 
-	<button onclick="change(4)" style="background: #CCBE00"> <img src="https://www.dropbox.com/s/o4otu48qrkji2ao/calculatorAppLogo.png?raw=1"></img></button> 
+	<button onclick="change(1)" style="background: #4BC42D"> <img src="Images/weatherApp.png"></img></button> 
+	<button onclick="change(2)" style="background: #E5000F"> <img src="Images/pomodoroApp.png"></img></button> 
+	<button onclick="change(3)" style="background: #00AEFF"> <img src="Images/wikipediaViewer.png"></img></button> 
+	<button onclick="change(4)" style="background: #CCBE00"> <img src="Images/calculatorAppLogo.png"></img></button> 
 
 </div>
 
