Updated the nav bar logos

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 <div id="splash">
 	<button onclick="change(0)" style="background: #A61C88"> <img src="Images/votingAppLogo.png"></img></button> 
-	<button onclick="change(1)" style="background: #4BC42D"> <img src="Images/weatherApp.png"></img></button> 
-	<button onclick="change(2)" style="background: #E5000F"> <img src="Images/pomodoroApp.png"></img></button> 
-	<button onclick="change(3)" style="background: #00AEFF"> <img src="Images/wikipediaViewer.png"></img></button> 
+	<button onclick="change(1)" style="background: #4BC42D"> <img src="Images/weatherAppLogo.png"></img></button> 
+	<button onclick="change(2)" style="background: #E5000F"> <img src="Images/pomodoroAppLogo.png"></img></button> 
+	<button onclick="change(3)" style="background: #00AEFF"> <img src="Images/wikipediaViewerLogo.png"></img></button> 
 	<button onclick="change(4)" style="background: #CCBE00"> <img src="Images/calculatorAppLogo.png"></img></button> 
 
 </div>
@@ -25,22 +25,22 @@
 	
          <li>
 			<a href="https://github.com/CrumrineCoder" id="github" >
-				<img src="https://www.dropbox.com/s/ip2xtp3cbss2lq9/githubWhite.png?raw=1" width="42" height="42" border="0" color="white" >
+				<img src="Images/githubWhite.png" width="42" height="42" border="0" color="white" >
 			</a>
          </li>
          <li>
 			<a href="https://codepen.io/collection/DxOEJM/#0">
-				<img src="https://www.dropbox.com/s/aa4m5yv5qa8hw04/codepenWhite.png?raw=1" width="42" height="42" border="0">
+				<img src="Images/codepenWhite.png" width="42" height="42" border="0">
 			</a>
          </li>
          <li>
 			<a href="https://www.linkedin.com/in/nicolas-crumrine-50899b120/">
-				<img src="https://www.dropbox.com/s/9womvy68itpalg6/linkedinWhite.png?raw=1" width="42" height="42" border="0">
+				<img src="Images/linkedinWhite.png" width="42" height="42" border="0">
             </a>
          </li>
          <li> 
             <a href="download link"> 
-				<img src="https://www.dropbox.com/s/lgr3bxn9pmapo1q/resume.png?raw=1" width="42" height="42" border="0">
+				<img src="Images/resume.png" width="42" height="42" border="0">
             </a>
          </li>
       </ul>
