--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="splash">
 	<button onclick="change(0)" style="background: #A61C88"> <img src="Images/votingAppLogo.png"></img></button> 
-	<button onclick="change(1)" style="background: #CCBE00"> <img src="Images/tabletopAppLogo.png"></img></button> 
+	<button onclick="change(1)" style="background: #6100FF"> <img src="Images/tabletopAppLogo.png"></img></button> 
 	<button onclick="change(2)" style="background: #4BC42D"> <img src="Images/weatherApp%20logo.png"></img></button> 
 	<button onclick="change(3)" style="background: #E5000F"> <img src="Images/pomodoroAppLogo.png"></img></button> 
 	<button onclick="change(4)" style="background: #00AEFF"> <img src="Images/wikipediaViewerLogo.png"></img></button> 
