pdn to png, acknowledgment of logo

--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
    </div>
 
    <ul id = "credit"> Logo Credits 
-	<li>Resume logo by Nicholas Menghini from Noun Project </li>
-    <li>Poll Website logo by Misha from Noun Project </li>
-	<li> Weather App logo by Shastry from Noun Project </li> 
-	<li> Clock logo by mikicon from Noun Project </li> 
-	<li> Calculator logo by Thengakola from Noun Project </li> 
-	<li> Tabletop logo by Andrew Doane from Noun Project </li>
+	<li>Resume logo by Nicholas Menghini of the Noun Project </li>
+    <li>Poll Website logo by Misha of the Noun Project </li>
+	<li> Weather App logo by Shastry of the Noun Project </li> 
+	<li> Clock logo by mikicon of the Noun Project </li> 
+	<li> Calculator logo by Thengakola of the Noun Project </li> 
+	<li> Tabletop logo by Andrew Doane of the Noun Project </li>
+	<li> Simon Says logo adapted from Creaticca Creative Agency of the Noun Project </li>
    </ul>
 </div>   
   <script type="text/javascript" src="projectController.js"> </script>
