--- a/index.html
+++ b/index.html
@@ -27,27 +27,29 @@
   <div id="index">
    
 
-    <h1> Title </h1>
+    <h1> {{projectInfo.title}} </h1>
     <ul>
-      <li> Frontend </li>
-      <li> Backend </li>
+		<div id="projectFrontEnd">
+			<li class="frontend"> {{projectInfo.frontTechnologies}} </li>
+		</div>
+		<div id="projectBackEnd">
+			<li class="backend"> {{projectInfo.backTechnologies}} </li>
+		</div>
     </ul>
-    <p> Description of Website </p>
-    <p> Product Paper </p>
-    <ul>
-      <li> See Code </li>
-      <li> Visit Website </li>
+    <p> {{projectInfo.projectDescription}} </p>
+    <p> {{projectInfo.productPaper}} </p>
+    <ul id="projectLinks">
+      <li><a href="{{projectInfo.codeLink}}" target="_blank"><i class="fa fa-code" rgb="(0,0,0)"> See Code</i></a></li>
+      <li><a href="{{projectInfo.websiteLink}}" target="_blank"> <i class="fa fa-external-link"> Visit Website</i> </a></li>
     </ul>
-    <img> Image </img>
-    <div>
-      Project Select
-    </div>
-	<span ng-repeat="project in buttons">
-		<button type="image" class="projectSelectButton" id={{project.id}} ng-click="changeProject(project.id)">
-			<img src={{project.logo}} class="projectSelectImage">
-		</button>
-	</span>
-	
+    <img src="{{projectInfo.picture}}"> </img>
+    <div id="projectSelectBoxes">
+		<span ng-repeat="project in buttons">
+			<button type="image" class="projectSelectButton" id={{project.id}} ng-click="changeProject(project.id)">
+				<img src={{project.logo}} class="projectSelectImage">
+			</button>
+		</span>
+	</div>
     <div id="contactInfo"> <i class="fa fa-envelope-o fa-2x"> </i>
       <p>Come say hi! These projects are constantly in development and I'd appreciate any feedback.</p>
       <p><a href="http://www.google.com/recaptcha/mailhide/d?k=01ght4MFCiQ05S163X7JgTjQ==&amp;c=aoPleq7inL7lHu6-9yfVzIwsgLWVKmilYlU7XLMsnxo=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01ght4MFCiQ05S163X7JgTjQ\x3d\x3d\x26c\x3daoPleq7inL7lHu6-9yfVzIwsgLWVKmilYlU7XLMsnxo\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"
