Nav bar fixed. Width of card changed.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,26 @@
 		</button>
   </div>
   <div id="index">
-  
+    <nav>
+      <ul>
+        <li id="nameNavContainer">
+          <p id="nic"> Nicolas Crumrine </p>
+          <p id="nicJob"> Web Developer based in NYC </p>
+        </li>
+        <li> <a href="https://github.com/CrumrineCoder" id="github">
+					<img src="Images/githubWhite.png" width="42" height="42" border="0" color="white" >
+				</a> </li>
+        <li> <a href="https://codepen.io/collection/DxOEJM/#0">
+					<img src="Images/codepenWhite.png" width="42" height="42" border="0">
+				</a> </li>
+        <li> <a href="https://www.linkedin.com/in/nicolas-crumrine-50899b120/">
+					<img src="Images/linkedinWhite.png" width="42" height="42" border="0">
+				</a> </li>
+        <li> <a href="download link"> 
+					<img src="Images/resume.png" width="42" height="42" border="0">
+				</a> </li>
+      </ul>
+    </nav>
 	<!-- Project Section -->
 	<div id="projects">
 		<!-- Select a project section -->
