Overlay is 100%, centered

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		
 		<img id="projectPicture" src="{{projectInfo.picture}}" />
 		<div id="projectInfoText">
-			<h1> {{projectInfo.title}} </h1>
+			<h1 id="projectTitle"> {{projectInfo.title}} </h1>
 			<ul>
 				<div id="projectFrontEnd">
 					<li class="frontend"> {{projectInfo.frontTechnologies}} </li>
