Center justified the text, anchor points added to logos

--- a/index.html
+++ b/index.html
@@ -55,30 +55,34 @@
 		
 		<img id="projectPicture" src="{{projectInfo.picture}}" />
 		<div id="projectInfoText">
-			<h1 id="projectTitle"> {{projectInfo.title}} </h1>
-			<ul>
-				<div id="projectFrontEnd">
-					<li class="frontend"> {{projectInfo.frontTechnologies}} </li>
-				</div>
-				<div id="projectBackEnd">
-					<li class="backend"> {{projectInfo.backTechnologies}} </li>
-				</div>
-			</ul>
-			<p> {{projectInfo.projectDescription}} </p>
-			<p> {{projectInfo.productPaper}} </p>
-			<ul id="projectLinks">
-			  <li><a href="{{projectInfo.codeLink}}" target="_blank"><i class="fa fa-code" rgb="(0,0,0)"> See Code </i></a></li>
-			  <li><a href="{{projectInfo.websiteLink}}" target="_blank"> <i class="fa fa-external-link"> Visit Website </i> </a></li>
-			  <li ng-hide="projectInfo.freeCodeCampLink == null"><a href="{{projectInfo.freeCodeCampLink}}" target="_blank"> <i class="fa fa-free-code-camp"> FreeCodeCamp Challenge </i> </a></li>
-			</ul>
+			<div id="test">
+				<h1 id="projectTitle"> {{projectInfo.title}} </h1>
+				<ul>
+					<div id="projectFrontEnd">
+						<li class="frontend"> {{projectInfo.frontTechnologies}} </li>
+					</div>
+					<div id="projectBackEnd">
+						<li class="backend"> {{projectInfo.backTechnologies}} </li>
+					</div>
+				</ul>
+				<p> {{projectInfo.projectDescription}} </p>
+				<p> {{projectInfo.productPaper}} </p>
+				<ul id="projectLinks">
+				  <li><a href="{{projectInfo.codeLink}}" target="_blank"><i class="fa fa-code" rgb="(0,0,0)"> See Code </i></a></li>
+				  <li><a href="{{projectInfo.websiteLink}}" target="_blank"> <i class="fa fa-external-link"> Visit Website </i> </a></li>
+				  <li ng-hide="projectInfo.freeCodeCampLink == null"><a href="{{projectInfo.freeCodeCampLink}}" target="_blank"> <i class="fa fa-free-code-camp"> FreeCodeCamp Challenge </i> </a></li>
+				</ul>
+			</div>
 		</div>
 
 	</div>
 	<div id="projectSelectBoxes">
 			<span ng-repeat="project in buttons">
-				<button type="image" class="projectSelectButton" id={{project.id}} ng-click="changeProject(project.id)" ng-style="{'background-color': project.color}">
-					<img src={{project.logo}} class="projectSelectImage" ng-style="{'background-color': project.color}">
-				</button>
+				<a href="#index">
+					<button type="image" class="projectSelectButton" id={{project.id}} ng-click="changeProject(project.id)" ng-style="{'background-color': project.color}">
+						<img src={{project.logo}} class="projectSelectImage" ng-style="{'background-color': project.color}">
+					</button>
+				</a>
 			</span>
 		</div>
 	<!-- Contact Section -->
