--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 		
   </div>
   <div id="index">
-   
+   test
 	<!-- Project Section -->
 	<div id="projects">
 		<!-- Select a project section -->
 		
 		<img id="projectPicture" src="{{projectInfo.picture}}" />
 		<div id="projectInfoText">
-			<div id="test">
+			<div id="content">
 				<h1 id="projectTitle"> {{projectInfo.title}} </h1>
 				<ul>
 					<div id="projectFrontEnd">
