--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
       </ul>
     </nav>
 	<div id="aboutMeOverlay" onclick="off()">
-		<div id="aboutMeText">Hi, I'm Nicolas Crumrine. I made this website and the websites featured on it. 
-		
-		
-		I work with HTML, CSS, Javascript, Angular, Express.JS and Node.JS and am failing forward through FreeCodeCamp's curriculum. Web Development is a beautiful tool for making the world a better  place. I like to read history, sci-fi, and Terry Prachett, draw knights in shining armor, hum along to space filk and rock operas, or play D&D with my friends when I'm not building websites. I hope I can help.</div>
+		<div id="aboutMeText">Hi, I'm Nicolas Crumrine. I made this website and the websites featured. I use HTML, CSS, Javascript, Angular, Express.JS and Node.JS to make the world a better place. I enjoy seeing, understanding, and tinkering with patterns. I like to read history, sci-fi, and Terry Prachett, draw knights in shining armor, hum along to space filk and rock operas, or collaboratively tell a story with friends when I'm not building websites. <br > <br>
+		Visit a few of my projects and email me if you like what you see. I hope I can help.</div>
 	</div>
 	<!-- Initial/Splash page -->
   <div id="splash">
-	<h1> Pick a Project </h1>
+
     <button ng-click="change(0)" style="background: #FF7B00"> 
 			<img src="Images/npcLookUpLogo.png"></img>
 		</button>
@@ -74,7 +72,7 @@
 				<ul id="projectLinks">
 				  <li><a href="{{projectInfo.codeLink}}" target="_blank"><i class="fa fa-code" rgb="(0,0,0)"> See Code </i></a></li>
 				  <li><a href="{{projectInfo.websiteLink}}" target="_blank"> <i class="fa fa-external-link"> Visit Website </i> </a></li>
-				  <li ng-hide="projectInfo.freeCodeCampLink == null"><a href="{{projectInfo.freeCodeCampLink}}" target="_blank"> <i class="fa fa-free-code-camp"> FreeCodeCamp Challenge </i> </a></li>
+				  <!-- <li ng-hide="projectInfo.freeCodeCampLink == null"><a href="{{projectInfo.freeCodeCampLink}}" target="_blank"> <i class="fa fa-free-code-camp"> FreeCodeCamp Challenge </i> </a></li> -->
 				</ul>
 			</div>
 		</div>
