Contact section spruced up.

--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
 	<!-- Contact Section -->
     <div id="contactInfo"> <i class="fa fa-envelope-o fa-2x"> </i>
       <p>Come say hi! These projects are constantly in development and I'd appreciate any feedback.</p>
-      <p><a href="http://www.google.com/recaptcha/mailhide/d?k=01ght4MFCiQ05S163X7JgTjQ==&amp;c=aoPleq7inL7lHu6-9yfVzIwsgLWVKmilYlU7XLMsnxo=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01ght4MFCiQ05S163X7JgTjQ\x3d\x3d\x26c\x3daoPleq7inL7lHu6-9yfVzIwsgLWVKmilYlU7XLMsnxo\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"
-          title="Reveal this e-mail address">c...</a>@gmail.com </p>
+      <p>crumrinecoding at gmail dot com </p>
     </div>
 	
 	<!-- Credits for logos -->
