Responsive Nav design

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
           <p id="nic"> Nicolas Crumrine </p>
           <p id="nicJob"> Web Developer based in NYC     <button id="aboutMeButton" onclick="on()">   Read More</button></p> 
         </li>
-        <li> <a href="https://github.com/CrumrineCoder" id="github" title="Github: revised projects">
+        <li> <a href="https://github.com/CrumrineCoder" id="github" title="Github: revised projects" target="_blank">
 					<img src="Images/githubWhite.png" width="42" height="42" border="0" color="white" >
 				</a> </li>
-		<li> <a href="https://www.linkedin.com/in/nicolas-crumrine-50899b120/" title="LinkedIn">
+		<li> <a href="https://www.linkedin.com/in/nicolas-crumrine-50899b120/" title="LinkedIn" target="_blank">
 					<img src="Images/linkedinWhite.png" width="42" height="42" border="0">
 				</a> </li>
-        <li> <a href="https://codepen.io/collection/DxOEJM/#0" title="Codepen: old projects">
+        <li> <a href="https://codepen.io/collection/DxOEJM/#0" title="Codepen: old projects" target="_blank">
 					<img src="Images/codepenWhite.png" width="42" height="42" border="0">
 				</a> </li>       
       </ul>
