Responsive margin and weight changed to contact

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	<!-- Contact Section -->
     <div id="contactInfo"> <i class="fa fa-envelope-o fa-2x"> </i>
       <p>Come say hi! These projects are constantly in development and I'd appreciate any feedback.</p>
-      <p>crumrinecoding at gmail dot com </p>
+      <p id="gmailTagLine">crumrinecoding at gmail dot com </p>
     </div>
 	
 	<!-- Credits for logos -->
