No more resume logo; updated to about me

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       </ul>
     </nav>
 	<div id="aboutMeOverlay" onclick="off()">
-		<div id="aboutMeText">Hi, I'm Nicolas Crumrine. I made this website and the websites featured. I use HTML, CSS, Javascript, Angular, Express.JS and Node.JS to make the world a better place. I enjoy seeing, understanding, and tinkering with patterns. I like to read history, sci-fi, and Terry Prachett, draw knights in shining armor, hum along to space filk and rock operas, or collaboratively tell a story with friends when I'm not building websites. <br > <br>
-		Visit a few of my projects and email me if you like what you see. I hope I can help.</div>
+		<div id="aboutMeText">Hi, I'm Nicolas Crumrine and I make websites. I currently use HTML, CSS, Javascript, Angular, Express.JS and Node.JS and am working to learn other languages. I enjoy identifying, understanding, and tinkering with patterns. I like to read history, sci-fi, and Terry Prachett, draw, rock operas, and do collaborative storytelling when I'm not building websites. <br > <br>
+		Visit a few of my projects and email me if you like what you see. I hope I can help. <br> <br> Click anywhere to return to safety.</div>
 	</div>
 	<!-- Initial/Splash page -->
   <div id="splash">
@@ -95,7 +95,6 @@
 	
 	<!-- Credits for logos -->
     <ul id="credit"> Logo Credits
-      <li>Resume logo by Nicholas Menghini of the Noun Project </li>
       <li>Poll Website logo by Misha of the Noun Project </li>
       <li> Weather App logo by Shastry of the Noun Project </li>
       <li> Clock logo by mikicon of the Noun Project </li>
