Overlay text for logos added

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 				<a ng-click="scrollTo('index')">
 					<button type="image" class="projectSelectButton" id={{project.id}} ng-click="changeProject(project.id)" ng-style="{'background-color': project.color}">
 						<img src={{project.logo}} class="projectSelectImage" ng-style="{'background-color': project.color}">
+						<h2> {{project.title}} </h2>
 					</button>
 				</a>
 			</span>
