Working on the logos

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 	
 	<!-- Credits for logos -->
     <ul id="credit"> Logo Credits
+	  <li> NPC Lookup logo by Björn Andersson of the Noun Project </li>
       <li>Poll Website logo by Misha of the Noun Project </li>
       <li> Weather App logo by Shastry of the Noun Project </li>
       <li> Clock logo by mikicon of the Noun Project </li>
