--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     <ul id="credit"> Logo Credits
 	  <li> NPC Lookup logo by Björn Andersson of the Noun Project </li>
       <li>Poll Website logo by Misha of the Noun Project </li>
-      <li> Weather App logo by Shastry of the Noun Project </li>
+      <li> Weather App logo by João Proença of the Noun Project </li>
       <li> Clock logo by mikicon of the Noun Project </li>
-      <li> Calculator logo by Thengakola of the Noun Project </li>
+      <li> Calculator logo by Ralf Schmitzer of the Noun Project </li>
       <li> Tabletop logo by Andrew Doane of the Noun Project </li>
       <li> Simon Says logo adapted from Creaticca Creative Agency of the Noun Project </li>
   </div>
