--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul>
         <li id="nameNavContainer">
           <p id="nic"> Nicolas Crumrine </p>
-          <p id="nicJob"> Web Developer based in NYC     <button id="aboutMeButton" onclick="on()">   Read More</button></p> 
+          <p id="nicJob"> Web Developer based in NYC     <button id="aboutMeButton" onclick="on(); creditsOff();">   Read More</button></p> 
         </li>
         <li> <a href="https://github.com/CrumrineCoder" id="github" title="Github: revised projects" target="_blank">
 					<img src="Images/githubWhite.png" width="42" height="42" border="0" color="white" >
@@ -37,6 +37,20 @@
 	<div id="aboutMeOverlay" onclick="off()">
 		<div id="aboutMeText">Hi, I'm Nicolas Crumrine and I make websites. I currently use HTML, CSS, Javascript, Angular, Express.JS and Node.JS and am working to learn other languages. I enjoy identifying, understanding, and tinkering with patterns. I like to read history, sci-fi, and Terry Prachett, drawing, rock operas, and do collaborative storytelling when I'm not building websites. <br > <br>
 		Visit a few of my projects and email me if you like what you see. I hope I can help. <br> <br> Click anywhere to return to safety.</div>
+	</div>
+	<div id="logoCreditsOverlay" onclick="creditsOff()">
+			<!-- Credits for logos -->
+		<ul id="credit"> Logo Credits
+		  <li> NPC Lookup logo by Björn Andersson of the Noun Project </li>
+		  <li>Poll Website logo by Misha of the Noun Project </li>
+		  <li> Weather App logo by João Proença of the Noun Project </li>
+		  <li> Clock logo by mikicon of the Noun Project </li>
+		  <li> Calculator logo by Ralf Schmitzer of the Noun Project </li>
+		  <li> Tabletop logo by Andrew Doane of the Noun Project </li>
+		  <li> Simon Says logo adapted from Creaticca Creative Agency of the Noun Project </li>
+		  
+		  Click Anywhere to return to safety.
+		 </ul>
 	</div>
 	<!-- Initial/Splash page -->
   <div id="splash">
@@ -89,9 +103,10 @@
     <div id="contactInfo"> <i class="fa fa-envelope-o fa-2x"> </i>
       <p>Come say hi! These projects are constantly in development and I'd appreciate any feedback.</p>
       <p id="gmailTagLine">crumrinecoding at gmail dot com </p>
+	
     </div>
 	
-	
+	  <button id="logoCredits" onclick="creditsOn(); off">Logo Credits</button>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular.js'></script>
